@@ -1,0 +1,6 @@
+<?xml version="1.0" encoding="utf-8" ?>
+<linker>
+	<assembly fullname="System">
+		<type fullname="System.ComponentModel.TypeConverter" preserve="all" />
+	</assembly>
+</linker>
